<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_play_next">Play next</string>
    <string name="action_add_to_queue">Add to queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="tab_header_songs">SONGS</string>
    <string name="tab_header_genres">GENRES</string>
    <string name="tab_header_albums">ALBUMS</string>
    <string name="tab_header_artists">ARTISTS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="not_available">Not available</string>
    <string name="song_thumbnail">Song thumbnail.</string>
    <string name="action_search">Search music</string>
    <string name="title_activity_create_playlist">CreatePlaylist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_button">Settings button.</string>
    <string name="title_activity_add_to_playlist">AddToPlaylistActivity</string>
    <string name="were_added_to_playlist">&#160;songs added to&#160;</string>
    <string name="was_added_to_playlist">&#160;song added to&#160;</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="play_description">Play or pause button.</string>
    <string name="next_description">Button next.</string>
    <string name="prev_description">Button previous.</string>
    <string name="repeat_description">Repeat button.</string>
    <string name="shuffle_description">Shuffle button.</string>
    <string name="all_songs">All Songs</string>
    <string name="playlists">Playlists</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_remove_playlist">Remove playlist</string>
    <string name="playlist_deleted">&#160;was deleted.</string>
    <string name="drawer_menu_option">Drawer menu option.</string>

</resources>
