<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_play_next"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/action_play_next"/>

    <item
        android:id="@+id/action_add_to_queue"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/action_add_to_queue"/>

    <item
        android:id="@+id/action_add_to_playlist"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_add_to_playlist"/>

    <item
        android:id="@+id/action_remove_from_playlist"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_remove_from_playlist"/>

</menu>