<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_panel"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/panel_height"
    android:padding="0dp"
    android:layout_margin="0dp">

    <ImageView
        android:layout_width="@dimen/thumbnails"
        android:layout_height="@dimen/thumbnails"
        android:contentDescription="@string/song_thumbnail"
        android:src="@drawable/default_song_thumbnail"
        android:background="@color/primary_light"
        android:id="@+id/image_view_song_thumbnail"
        android:layout_centerVertical="true"
        android:padding="0dp"/>

    <!--<ProgressBar-->
        <!--style="?android:attr/progressBarStyleHorizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="14dp"-->
        <!--android:id="@+id/progressBar"-->
        <!--android:padding="0dp"-->
        <!--android:layout_marginTop="-6dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_toRightOf="@+id/image_view_song_thumbnail"-->
        <!--android:layout_toEndOf="@+id/image_view_song_thumbnail" />-->

    <ImageButton
        style="@style/ControlButton"
        android:layout_width="@dimen/thumbnails"
        android:layout_height="@dimen/thumbnails"
        android:id="@+id/image_button_panel_control"
        android:src="@android:drawable/ic_media_play"
        android:tint="@color/playback_control_not_active"
        android:scaleType="fitCenter"
        android:padding="5dp"
        android:contentDescription="@string/play_description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/image_view_song_thumbnail"
        android:layout_toEndOf="@id/image_view_song_thumbnail"
        android:layout_toLeftOf="@id/image_button_panel_control"
        android:layout_toStartOf="@id/image_button_panel_control"
        android:orientation="vertical">

        <TextView
            android:text="@string/not_available"
            android:singleLine="true"
            android:textColor="@color/highlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_song_title" />

        <TextView
            android:text="@string/not_available"
            android:textColor="@color/highlight"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_song_artist" />
    </LinearLayout>

</RelativeLayout>